css/player.css
#player {
	position: relative;
	height: 48px;
	background-color: #202020;
	border-top: 2px solid white;
	z-index: 10;
}

#player a,#player .duration {
	display: inline-block;
	overflow: hidden;
}

#controls,#controls2 {
	display: inline-block;
}

#controls {
	margin-left: 6px;
	padding: 0;
}

#controls a {
	height: 44px;
}

#controls a,#player .duration {
	margin: 0;
}

#player .elapsed-time,#player .total-time {
	position: absolute;
    top: 26px;
    color: whitesmoke;
}

#player .elapsed-time {
    left: 162px;
}

#player .total-time {
	right: 109px;
}

#play,#prev,#next {
	width: 48px;
}

#loader,#info,#bar,#load-progress {
	width: auto;
}

#loader {
	position: absolute;
	left: 196px;
	top: 0;
	right: 167px;
}

#player .duration {
	width: 36px;
	max-width: 36px;
	white-space: nowrap;
}

#load-progress {
	height: 24px;
}

#controls2 {
	top: 1px;
	position: absolute;
	right: 11px;
}

#controls2 a.control, #controls2 > div.control {
	margin: 12px 2px 0 2px;
	height: 24px;
	width: 24px;
	display: inline-block;
	overflow: hidden;
	cursor: pointer;
}

/*Btn1*/
#play.play {
	background: no-repeat url("../images/controls.png") -48px 0;
}

#play.play:hover {
	background: no-repeat url("../images/controls.png") -48px -96px;
}

#play.play:active {
	background: no-repeat url("../images/controls.png") -48px -192px;
}

#play.pause {
	background: no-repeat url("../images/controls.png") 0 0;
}

#play.pause:hover {
	background: no-repeat url("../images/controls.png") 0 -96px;
}

#play.pause:active {
	background: no-repeat url("../images/controls.png") 0 -192px;
}

#prev {
	background: no-repeat url("../images/controls.png") 0 -48px;
}

#prev:hover {
	background: no-repeat url("../images/controls.png") 0 -144px;
}

#prev:active {
	background: no-repeat url("../images/controls.png") 0 -240px;
}

#next {
	background: no-repeat url("../images/controls.png") -48px -48px;
}

#next:hover {
	background: no-repeat url("../images/controls.png") -48px -144px;
}

#next:active {
	background: no-repeat url("../images/controls.png") -48px -240px;
}

/*Bar*/
#info {
    margin: 3px -28px -11px 1px;
    text-align: center;
    padding: 0;
    height: 38px;
    width: auto;
    position: relative;
    font-family: helvetica, arial, sans-serif;
    font-size: 1.3em;
    white-space: nowrap;
}

#bar {
	position: relative;
	width: 100%;
	margin: 0 13px;
	cursor: pointer;
	background-color: #121212;
	z-index: 7;
	border-radius: 8px;
	height: 7px;
	border: 1px solid white;
}

#bar .ui-slider-range {
	position: relative;
	background: white;
	width: 0;
	z-index: 8;
	border-radius: 8px;
	height: 7px;
}

#info span {
	color: #F9F7ED;
	font-size: 1em;
	font-family: Candela, Helvetica, sans-serif;
}

#info span.bold {
	font-family: CandelaBold, Helvetica, sans-serif;
}

/*Tooltip*/

.ui-tooltip {
    border: 0;
    padding: 6px;
    border-radius: 5px;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
}

/*Volume*/
#volume-wrapper, #volume-max, #current-volume {
	display: none;
}

#volume-wrapper.active, #volume-wrapper.active #volume-max, #volume-wrapper.active #current-volume {
	display: block;
}

#volume-wrapper {
    background: #202020;
    width: 22px;
    z-index: 7;
    position: absolute;
    height: 132px;
    bottom: 40px;
    border-top: 2px solid white;
    border-left: 2px solid white;
    border-right: 2px solid white;
    right: 0px;
    border-top-left-radius: 3px;
    border-top-right-radius: 3px;
}

#volume-max {
	position: relative;
	width: 7px;
	margin: 0 7px;
	cursor: pointer;
	background-color: #121212;
	z-index: 8;
	border-radius: 4px;
	height: 120px;
	border: 1px solid white;
	top: 5px;
}

#volume-max .ui-slider-range {
	position: absolute;
	background: white;
	z-index: 9;
	border-radius: 4px;
	height: 0px;
	right:0px;
	left: 0px;
	bottom: 0px;
	height: 120px;
}

/*Btn2*/
#loop {
	background: no-repeat url("../images/controls2.png") 0 0;
}

#loop.active {
	background-position: -24px 0;
}

#shuffle {
	background: no-repeat url("../images/controls2.png") 0 -24px;
}

#shuffle.active {
	background-position: -24px -24px;
}

#volume {
	background: no-repeat url("../images/controls2.png") 0 -48px;
}

